; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/dispnv04/extr_hw.c_NVReadVgaSeq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/dispnv04/extr_hw.c_NVReadVgaSeq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { i32 }

@NV_PRMVIO_SRX = common dso_local global i32 0, align 4
@NV_PRMVIO_SR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @NVReadVgaSeq(%struct.drm_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.drm_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.drm_device* %0, %struct.drm_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @NV_PRMVIO_SRX, align 4
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @NVWritePRMVIO(%struct.drm_device* %7, i32 %8, i32 %9, i32 %10)
  %12 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @NV_PRMVIO_SR, align 4
  %15 = call i32 @NVReadPRMVIO(%struct.drm_device* %12, i32 %13, i32 %14)
  ret i32 %15
}

declare dso_local i32 @NVWritePRMVIO(%struct.drm_device*, i32, i32, i32) #1

declare dso_local i32 @NVReadPRMVIO(%struct.drm_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
